Hello world post

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -63,7 +63,7 @@
             </li>
 
             <li>
-              <a href="skype:sirupsen?add" class="icon-comment" onClick="_gaq.push(['_trackEvent', 'Link', 'Click', 'Sidebar Skype']);" title="Feel free to add me on Skype"></a>
+              <a href="https://plus.google.com/u/0/114475371508868666033/posts" class="icon-google-plus-sign" onClick="_gaq.push(['_trackEvent', 'Link', 'Click', 'Sidebar gPlus']);" title="Feel free to add me on Google Plus"></a>
             </li>
 
             <li>
