--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -20,7 +20,7 @@
 
     <link href='http://fonts.googleapis.com/css?family=Open+Sans:400italic,400,600' rel='stylesheet' type='text/css'>
 
-    <link href="http://matthew-odette.github.com/atom.xml" rel="alternate" title="Matthew Odette" type="application/atom+xml" />
+    <link href="http://feeds.feedburner.com/MatthewOdette" rel="alternate" title="MatthewOdette.com" type="application/atom+xml" />
 
     <link rel="shortcut icon" href="/static/images/favicon.png" />
 
