--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -24,7 +24,7 @@ blog: true
 
   <footer class="ten columns">
     <p id='follow'>
-      You should follow me on Twitter <a href="http://twitter.com/MatthewOdette" onClick="_gaq.push(['_trackEvent', 'Link', 'Click', 'Post Twitter']);">here.</a>
+      We should follow eachother <a href="http://twitter.com/MatthewOdette" onClick="_gaq.push(['_trackEvent', 'Link', 'Click', 'Post Twitter']);">on Twitter.</a>
     </p>
   </footer>
 </article>
