Typo fix in default template

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -51,7 +51,7 @@
 
           <ul id="social">
             <li>
-              <a href="mailto:mew@matthewodette.com" class="icon-envelope-alt" onClick="_gaq.push(['_trackEvent', 'Link', 'Click', 'Sidebar Email']);" title="Say hi"></a>
+              <a href="mailto:me@matthewodette.com" class="icon-envelope-alt" onClick="_gaq.push(['_trackEvent', 'Link', 'Click', 'Sidebar Email']);" title="Say hi"></a>
             </li>
 
             <li>
