fixing up some old links and updating gitignore

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,5 +1,5 @@
 
-{% assign description = "Front end developer." %}
+{% assign description = "Developer. Seriel side project planner." %}
 
 <!doctype html>
 <!--[if lt IE 7 ]><html class="ie ie6" lang="en"> <![endif]-->
@@ -60,10 +60,6 @@
 
             <li>
               <a href="http://github.com/Matthew-Odette" class="icon-github" onClick="_gaq.push(['_trackEvent', 'Link', 'Click', 'Sidebar Github']);" title="I share and fork code on GitHub"></a>
-            </li>
-
-            <li>
-              <a href="https://plus.google.com/u/0/114475371508868666033/posts" class="icon-google-plus-sign" onClick="_gaq.push(['_trackEvent', 'Link', 'Click', 'Sidebar gPlus']);" title="Don't be a square, circle me on Google Plus"></a>
             </li>
 
             <li>
