spellign and grammer

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,5 +1,5 @@
 
-{% assign description = "Developer. Seriel side project planner." %}
+{% assign description = "Developer. Serial side project planner." %}
 
 <!doctype html>
 <!--[if lt IE 7 ]><html class="ie ie6" lang="en"> <![endif]-->
