--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,7 +22,7 @@
 
     <link href="http://feeds.feedburner.com/MatthewOdette" rel="alternate" title="MatthewOdette.com" type="application/atom+xml" />
 
-    <link rel="shortcut icon" href="/static/images/favicon.png" />
+    <link rel="shortcut icon" href="/static/images/favicon2.jpeg" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" /> 
 
@@ -49,7 +49,7 @@
         <section>
           <a id="avatar" href="/"></a>
 
-          <ul id="social">
+          <ul id="social" style="padding-left: 14px">
             <li>
               <a href="mailto:me@matthewodette.com" class="icon-envelope-alt" onClick="_gaq.push(['_trackEvent', 'Link', 'Click', 'Sidebar Email']);" title="Say hi"></a>
             </li>
