product hunt widget-mo-bobber

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -89,5 +89,19 @@
         var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
       })();
     </script>
+    <script>
+  window.productHuntUpcoming = {
+    appId: 2504,
+    position: 'bottomLeft',
+  };
+
+  (function(doc, scr, src, a, b) {
+    a = doc.createElement(scr);
+    b = doc.getElementsByTagName(scr)[0];
+    a.async = true;
+    a.src = src;
+    b.parentNode.insertBefore(a, b);
+  })(document, 'script', 'https://assets.producthunt.com/assets/upwigloader.js');
+</script>
   </body>
 </html> 
