--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -33,7 +33,7 @@
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:400italic,400,600' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Droid+Serif' rel='stylesheet' type='text/css'> 
     <link href="https://feeds.feedburner.com/sirupsen" rel="alternate" title="Sirupsen" type="application/atom+xml" /> 
-    <link rel="shortcut icon" href="/static/images/favicon.jpg" />
+    {% comment %} <link rel="shortcut icon" href="/static/images/favicon.jpg" /> {% endcomment %}
 
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" /> 
 
