--- a/static/css/layout.css
+++ b/static/css/layout.css
@@ -120,7 +120,7 @@ article ul li li li {
 }
 
 #avatar {
-  background-image: url('https://www.gravatar.com/avatar/100788a81c55bf038fb0798e264e2ec9.png?s=400');
+  background-image: url('https://gravatar.com/avatar/100788a81c55bf038fb0798e264e2ec9.png?s=400');
   background-size: cover;
   height: 134px;
   width: 134px;
