--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -86,7 +86,7 @@
           <ul id="me">
             <li>Simon Hørup Eskildsen</span></li>
             <li class="gray">
-              Infrastructure, resiliency and webscale <a href="http://shopify.com">@Shopify</a></br>
+              Site Reliability Engineering Lead <a href="http://shopify.com">@Shopify</a></br>
             </li>
           </ul>
 
