--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -20,6 +20,8 @@ blog: true
 
   <div class="ten columns" id="article-content">
     {{ content }}
+
+    <p><a href="https://tinyletter.com/sirupsen">Subscribe through email</a> to new articles (typically less than once a month).</p>
     </p>
   </div>
 </article>
