--- a/static/css/temp.css
+++ b/static/css/temp.css
@@ -1102,8 +1102,11 @@ sub {
   margin-bottom: 20px;
 }
 
-#follow {
+#subscribe {
   font-style: italic;
+  background-color: #fefcda;
+  border-radius: 3%;
+  padding: 10px;
 }
 
 /* #Page Styles
