--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -54,10 +54,10 @@
     <div class="container">	
       <div id='mobile' class='two columns hidden'>
         <ul>
-          <li><a href='/'>Sirupsen</a></li>
-          <li><span class="gray">Simon Hørup Eskildsen</span></li>
+          <li><a href="/">Simon Hørup Eskildsen</a></li>
+          <li><a href="/about">About</a></br></li>
           <li><a href="mailto:simon@sirupsen.com">simon@sirupsen.com</a></li>
-          <li><a href="https://twitter.com/Sirupsen">@Sirupsen</a></li>
+          <li><a href="https://twitter.com/sirupsen">@sirupsen</a></li>
         </ul>
       </div>
 
@@ -86,7 +86,7 @@
           <ul id="me">
             <li>Simon Hørup Eskildsen</span></li>
             <li class="gray">
-              Site Reliability Engineering Lead <a href="http://shopify.com">@Shopify</a></br>
+              Site Reliability Engineering Lead <a href="http://shopify.com">@Shopify</a> / <a href="/about">About</a></br>
             </li>
           </ul>
 
