--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -86,8 +86,11 @@
           <ul id="me">
             <li>Simon Hørup Eskildsen</span></li>
             <li class="gray">
-              Site Reliability Engineering Lead <a href="http://shopify.com">@Shopify</a> / <a href="/about">About</a></br>
+              Site Reliability Engineering Lead <a href="http://shopify.com">@Shopify</a>
             </li>
+            <li><br/></li>
+            <li><a href="/about">About</a></li>
+            <li><a href="https://www.goodreads.com/review/list/38623347?order=d&shelf=read&sort=rating">Book Reviews</a></li>
           </ul>
 
         </section>
