about link to avoid redirect

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -39,7 +39,7 @@
       <div id='mobile' class='two columns hidden'>
         <ul>
           <li><a href="/">Simon Hørup Eskildsen</a></li>
-          <li><a href="/about">About</a></br></li>
+          <li><a href="/about/">About</a></br></li>
           <li><a href="mailto:simon@sirupsen.com">simon@sirupsen.com</a></li>
           <li><a href="https://twitter.com/sirupsen">@sirupsen</a></li>
         </ul>
