--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -33,6 +33,8 @@
         var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
       })();
     </script>
+
+    <link rel="shortcut icon" href="">
   </head>
   <body>
     <div class="container">	
