fix other about link

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -83,7 +83,7 @@
               Site Reliability Engineering Lead <a href="http://shopify.com">@Shopify</a>
             </li>
             <li><br/></li>
-            <li><a href="/about">About</a></li>
+            <li><a href="/about/">About</a></li>
             <li><a href="https://www.goodreads.com/review/list/38623347?order=d&shelf=read&sort=rating">Book Reviews</a></li>
           </ul>
 
