perf: avoid 404 for favicon

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -34,7 +34,7 @@
       })();
     </script>
 
-    <link rel="shortcut icon" href="">
+    <link rel="icon" href="data:;base64,=">
   </head>
   <body>
     <div class="container">	
