perf: localize fonts

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,9 +2,9 @@
 layout: default
 blog: true
 preload:
-- https://fonts.gstatic.com/s/opensans/v15/mem6YaGs126MiZpBA-UFUK0Zdcg.ttf
-- https://fonts.gstatic.com/s/opensans/v15/mem5YaGs126MiZpBA-UNirkOUuhs.ttf
-- https://fonts.gstatic.com/s/droidserif/v8/tDbI2oqRg1oM3QBjjcaDkOr9rAA.ttf
+- /static/fonts/droid-serif-regular.ttf
+- /static/fonts/open-sans-italic.ttf
+- /static/fonts/open-sans-semibold.ttf
 ---
 
 <article class='ten columns offset-by-four' id="article-content">
