--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -74,7 +74,7 @@
           <ul id="me">
             <li>Simon Hørup Eskildsen</span></li>
             <li class="gray">
-              Site Reliability Engineering Lead <a href="http://shopify.com">@Shopify</a>
+              Director of Infrastructure Engineering <a href="http://shopify.com">@Shopify</a>
             </li>
             <li><br/></li>
             <li><a href="/about/">About</a></li>
