--- a/static/css/fonts.css
+++ b/static/css/fonts.css
@@ -1,11 +1,13 @@
 @font-face {
   font-family: 'Droid Serif';
   font-style: normal;
+  font-display: fallback;
   font-weight: 400;
   src: local('Droid Serif Regular'), local('DroidSerif-Regular'), url(/static/fonts/droid-serif-regular.ttf) format('truetype');
 }
 @font-face {
   font-family: 'Open Sans';
+  font-display: fallback;
   font-style: italic;
   font-weight: 400;
   src: local('Open Sans Italic'), local('OpenSans-Italic'), url(/static/fonts/open-sans-italic.ttf) format('truetype');
@@ -13,12 +15,14 @@
 @font-face {
   font-family: 'Open Sans';
   font-style: normal;
+  font-display: fallback;
   font-weight: 400;
   src: local('Open Sans Regular'), local('OpenSans-Regular'), url(/static/fonts/open-sans-regular.ttf) format('truetype');
 }
 @font-face {
   font-family: 'Open Sans';
   font-style: normal;
+  font-display: fallback;
   font-weight: 600;
   src: local('Open Sans SemiBold'), local('OpenSans-SemiBold'), url(/static/fonts/open-sans-semibold.ttf) format('truetype');
 }
