--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -68,7 +68,7 @@
             </li>
             <li><br/></li>
             <li><a href="/about/">About</a></li>
-            <li><a href="https://www.goodreads.com/review/list/38623347?order=d&shelf=read&sort=rating">Book Reviews</a></li>
+            <li><a href="https://www.goodreads.com/review/list/38623347?order=d&shelf=read&sort=date_read">Book Reviews</a></li>
           </ul>
 
         </section>
