Fix email links

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -26,7 +26,7 @@ preload:
     {{ content }}
 
     <div id="subscribe">
-        <a href="https://tinyletter.com/sirupsen">Subscribe through email</a> to new articles (typically less than once a month).
+        <a href="https://buttondown.email/sirupsen">Subscribe through email</a> to new articles (typically only a few a year).
     </div>
   </div>
 </article>
