forgot to close some links

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -69,8 +69,8 @@
             <li><br/></li>
             <li><a href="/about/">About</a></li>
             <li><a href="https://www.goodreads.com/review/list/38623347?order=d&shelf=read&sort=date_read">Book Reviews</a></li>
-            <li><a href="https://sirupsen.com/napkin">Monthly Napkin Math</li>
-            <li><a href="https://buttondown.email/sirupsen">Subscribe to new posts</li>
+            <li><a href="https://sirupsen.com/napkin">Monthly Napkin Math</a></li>
+            <li><a href="https://buttondown.email/sirupsen">Subscribe to new posts</a></li>
           </ul>
 
         </section>
