no redirects for assets

--- a/assets/css/layout.css
+++ b/assets/css/layout.css
@@ -122,7 +122,7 @@ article ul li li li {
 }
 
 #avatar {
-  background-image: url('/static/images/gravatar.jpg');
+  background-image: url('/static/images/gravatar.jpg/');
   background-size: cover;
   height: 134px;
   width: 134px;
