--- a/layouts/post/single.html
+++ b/layouts/post/single.html
@@ -1,7 +1,7 @@
 {{ define "header" }}
-  <link rel="preload" href="/static/fonts/droid-serif-regular.ttf" type="font/ttf" as="font" crossorigin="anonymous">
-  <link rel="preload" href="/static/fonts/open-sans-italic.ttf" type="font/ttf" as="font" crossorigin="anonymous">
-  <link rel="preload" href="/static/fonts/open-sans-semibold.ttf" type="font/ttf" as="font" crossorigin="anonymous">
+  <link rel="preload" href="/static/fonts/droid-serif-regular.ttf/" type="font/ttf" as="font" crossorigin="anonymous">
+  <link rel="preload" href="/static/fonts/open-sans-italic.ttf/" type="font/ttf" as="font" crossorigin="anonymous">
+  <link rel="preload" href="/static/fonts/open-sans-semibold.ttf/" type="font/ttf" as="font" crossorigin="anonymous">
 {{ end }}
 
 {{ define "main" }}
