--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -19,8 +19,8 @@
     </style>
     <!-- <link rel="stylesheet" type="text/css" href="/static/css/style.css"> -->
 
-    <link rel="preload" href="/static/fonts/open-sans-regular.ttf" type="font/ttf" as="font" crossorigin="anonymous">
-    <link rel="preload" href="/static/images/gravatar.jpg" as="image">
+    <link rel="preload" href="/static/fonts/open-sans-regular.ttf/" type="font/ttf" as="font" crossorigin="anonymous">
+    <link rel="preload" href="/static/images/gravatar.jpg/" as="image">
     {{ block "header" . }}
     {{ end }}
 
