--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -26,6 +26,15 @@
 
     <link href="https://feeds.feedburner.com/sirupsen" rel="alternate" title="Sirupsen" type="application/atom+xml" /> 
 
+    <script>
+      (function (w,d,s,o,f,js,fjs) {
+        w[o] = w[o] || function () { (w[o].q = w[o].q || []).push(arguments) };
+        js = d.createElement(s), fjs = d.getElementsByTagName(s)[0];
+        js.id = o; js.src = f; js.async = 1; fjs.parentNode.insertBefore(js, fjs);
+      }(window, document, 'script', 'plausible', 'https://plausible.io/js/p.js'));
+      plausible('page')
+    </script>
+
     <link rel="icon" href="data:;base64,=">
   </head>
   <body>
