--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -10,11 +10,14 @@
   {{ if (not (isset .Params "hidden")) }}
     <li>
       {{ if .Params.external_url }}
-      <a class='nine columns' href="{{.Params.external_url}}">{{.Title}}</a>
+        <a class='nine columns' href="{{.Params.external_url}}">{{.Title}}</a>
       {{ else }}
-          <a class='nine columns' href="{{.RelPermalink}}">{{.Title}}</a>
+        <a class='nine columns' href="{{.RelPermalink}}">{{.Title}}</a>
       {{ end }}
+
       <span class="two columns">{{.Date.Format "Jan 2006"}}</span>
+
+      <iframe src='https://share.transistor.fm/e/{{ .Params.id }}' width='100%' height='180' frameborder='0' scrolling='no' seamless='true' style='width:100%; height:180px;'></iframe>
     </li>
   {{ end }}
 {{ end }}
