--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -84,10 +84,23 @@
               Director of Infrastructure Engineering <a href="http://shopify.com">@Shopify</a>
             </li>
             <li><br/></li>
-            <li><a href="/about/">About</a></li>
-            <li><a href="https://www.goodreads.com/review/list/38623347?order=d&shelf=read&sort=date_read">Book Reviews</a></li>
-            <li><a href="/napkin/">Monthly Napkin Math</a></li>
-            <li><a href="https://buttondown.email/sirupsen">Subscribe to new posts</a></li>
+            <li>
+<svg height="14px" style="fill: #999; padding-right: 3px;" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 480 512">
+<path fill="currentColor" d="M248 8C111 8 0 119 0 256s111 248 248 248 248-111 248-248S385 8 248 8zm0 448c-110.3 0-200-89.7-200-200S137.7 56 248 56s200 89.7 200 200-89.7 200-200 200zm-80-280c-17.7 0-32 14.3-32 32s14.3 32 32 32 32-14.3 32-32-14.3-32-32-32zm160 0c-17.7 0-32 14.3-32 32s14.3 32 32 32 32-14.3 32-32-14.3-32-32-32z"></path></svg>
+              <a href="/about/">About</a></li>
+            <li>
+<svg height="14px" style="fill: #999; padding-right: 3px;" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 480 512">
+<path fill="currentColor" d="M448 360V24c0-13.3-10.7-24-24-24H96C43 0 0 43 0 96v320c0 53 43 96 96 96h328c13.3 0 24-10.7 24-24v-16c0-7.5-3.5-14.3-8.9-18.7-4.2-15.4-4.2-59.3 0-74.7 5.4-4.3 8.9-11.1 8.9-18.6zM128 134c0-3.3 2.7-6 6-6h212c3.3 0 6 2.7 6 6v20c0 3.3-2.7 6-6 6H134c-3.3 0-6-2.7-6-6v-20zm0 64c0-3.3 2.7-6 6-6h212c3.3 0 6 2.7 6 6v20c0 3.3-2.7 6-6 6H134c-3.3 0-6-2.7-6-6v-20zm253.4 250H96c-17.7 0-32-14.3-32-32 0-17.6 14.4-32 32-32h285.4c-1.9 17.1-1.9 46.9 0 64z"></path></svg>
+              <a href="https://www.goodreads.com/review/list/38623347?order=d&shelf=read&sort=date_read">Book Reviews</a></li>
+            <li>
+<svg height="14px" style="fill: #999; padding-right: 3px;" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 480 512">
+<path fill="currentColor" d="M497.9 142.1l-46.1 46.1c-4.7 4.7-12.3 4.7-17 0l-111-111c-4.7-4.7-4.7-12.3 0-17l46.1-46.1c18.7-18.7 49.1-18.7 67.9 0l60.1 60.1c18.8 18.7 18.8 49.1 0 67.9zM284.2 99.8L21.6 362.4.4 483.9c-2.9 16.4 11.4 30.6 27.8 27.8l121.5-21.3 262.6-262.6c4.7-4.7 4.7-12.3 0-17l-111-111c-4.8-4.7-12.4-4.7-17.1 0zM124.1 339.9c-5.5-5.5-5.5-14.3 0-19.8l154-154c5.5-5.5 14.3-5.5 19.8 0s5.5 14.3 0 19.8l-154 154c-5.5 5.5-14.3 5.5-19.8 0zM88 424h48v36.3l-64.5 11.3-31.1-31.1L51.7 376H88v48z"></path></svg>
+              <a href="/napkin/">Monthly Napkin Math</a></li>
+            <li>
+<svg height="14px" style="fill: #999; padding-right: 3px;"
+  xmlns="http://www.w3.org/2000/svg" viewBox="0 0 500 500">
+<path fill="currentColor" d="M567.938 243.908L462.25 85.374A48.003 48.003 0 0 0 422.311 64H153.689a48 48 0 0 0-39.938 21.374L8.062 243.908A47.994 47.994 0 0 0 0 270.533V400c0 26.51 21.49 48 48 48h480c26.51 0 48-21.49 48-48V270.533a47.994 47.994 0 0 0-8.062-26.625zM162.252 128h251.497l85.333 128H376l-32 64H232l-32-64H76.918l85.334-128z"></path></svg>
+              <a href="https://buttondown.email/sirupsen">Subscribe to new posts</a></li>
           </ul>
 
         </section>
