--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -10,9 +10,9 @@
   {{ if (not (isset .Params "hidden")) }}
     <li>
       {{ if .Params.external_url }}
-        <a class='nine columns' href="{{.Params.external_url}}">{{.Title}}</a>
+        <a class='nine columns' href="{{.Params.external_url}}">{{emojify .Title}}</a>
       {{ else }}
-        <a class='nine columns' href="{{.RelPermalink}}">{{.Title}}</a>
+        <a class='nine columns' href="{{.RelPermalink}}">{{emojify .Title}}</a>
       {{ end }}
 
       <span class="two columns">{{.Date.Format "Jan 2006"}}</span>
