--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -42,9 +42,12 @@
       <div id='mobile' class='two columns hidden'>
         <ul>
           <li><a href="/">Simon Hørup Eskildsen</a></li>
-          <li><a href="/about/">About</a></br></li>
           <li><a href="mailto:simon@sirupsen.com">simon@sirupsen.com</a></li>
           <li><a href="https://twitter.com/sirupsen">@sirupsen</a></li>
+          <li><a href="/about/">About</a></br></li>
+          <li style="padding-left: 12px;"><a href="/books/">Book Reviews</a></li>
+          <li style="padding-left: 12px;"><a href="/napkin/">Monthly Napkin Math</a></li>
+          <li style="padding-left: 12px;"><a href="https://buttondown.email/sirupsen">Subscribe to new posts</a></li>
         </ul>
       </div>
 
@@ -54,25 +57,25 @@
 
           <ul id="social">
             <li>
-              <a href="mailto:simon@sirupsen.com?subject=Hi" id="sidebar-email" title="Say hi" onClick="_gaq.push(['_trackEvent', 'Social Icons', 'Click', 'Email']);">
+              <a href="mailto:simon@sirupsen.com?subject=Hi" id="sidebar-email" title="Say hi">
                 <svg  height="23px": style="fill: #999" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><path d="M464 64H48C21.49 64 0 85.49 0 112v288c0 26.51 21.49 48 48 48h416c26.51 0 48-21.49 48-48V112c0-26.51-21.49-48-48-48zm0 48v40.805c-22.422 18.259-58.168 46.651-134.587 106.49-16.841 13.247-50.201 45.072-73.413 44.701-23.208.375-56.579-31.459-73.413-44.701C106.18 199.465 70.425 171.067 48 152.805V112h416zM48 400V214.398c22.914 18.251 55.409 43.862 104.938 82.646 21.857 17.205 60.134 55.186 103.062 54.955 42.717.231 80.509-37.199 103.053-54.947 49.528-38.783 82.032-64.401 104.947-82.653V400H48z"/></svg>
               </a>
             </li>
 
             <li>
-              <a href="https://www.linkedin.com/in/sirupsen" id="sidebar-linkedin" style="font-size: 21px;" onClick="_gaq.push(['_trackEvent', 'Social Icons', 'Click', 'LinkedIn']);">
+              <a href="https://www.linkedin.com/in/sirupsen" id="sidebar-linkedin" style="font-size: 21px;">
                 <svg height="20px": style="fill: #999" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448.1 512"><path d="M100.3 448H7.4V148.9h92.9V448zM53.8 108.1C24.1 108.1 0 83.5 0 53.8S24.1 0 53.8 0s53.8 24.1 53.8 53.8-24.1 54.3-53.8 54.3zM448 448h-92.7V302.4c0-34.7-.7-79.2-48.3-79.2-48.3 0-55.7 37.7-55.7 76.7V448h-92.8V148.9h89.1v40.8h1.3c12.4-23.5 42.7-48.3 87.9-48.3 94 0 111.3 61.9 111.3 142.3V448h-.1z"/></svg>
               </a>
             </li>
 
             <li>
-              <a href="https://twitter.com/Sirupsen" id="sidebar-twitter" title="You should follow me" style="font-size: 21px;" onClick="_gaq.push(['_trackEvent', 'Social Icons', 'Click', 'Twitter']);">
+              <a href="https://twitter.com/Sirupsen" id="sidebar-twitter">
                 <svg height="21px" style="fill: #999;" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><path d="M459.37 151.716c.325 4.548.325 9.097.325 13.645 0 138.72-105.583 298.558-298.558 298.558-59.452 0-114.68-17.219-161.137-47.106 8.447.974 16.568 1.299 25.34 1.299 49.055 0 94.213-16.568 130.274-44.832-46.132-.975-84.792-31.188-98.112-72.772 6.498.974 12.995 1.624 19.818 1.624 9.421 0 18.843-1.3 27.614-3.573-48.081-9.747-84.143-51.98-84.143-102.985v-1.299c13.969 7.797 30.214 12.67 47.431 13.319-28.264-18.843-46.781-51.005-46.781-87.391 0-19.492 5.197-37.36 14.294-52.954 51.655 63.675 129.3 105.258 216.365 109.807-1.624-7.797-2.599-15.918-2.599-24.04 0-57.828 46.782-104.934 104.934-104.934 30.213 0 57.502 12.67 76.67 33.137 23.715-4.548 46.456-13.32 66.599-25.34-7.798 24.366-24.366 44.833-46.132 57.827 21.117-2.273 41.584-8.122 60.426-16.243-14.292 20.791-32.161 39.308-52.628 54.253z"/></svg>
               </a>
             </li>
 
             <li>
-              <a href="https://github.com/Sirupsen" id="sidebar-github" title="I share and fork code here" onClick="_gaq.push(['_trackEvent', 'Social Icons', 'Click', 'Github']);">
+              <a href="https://github.com/Sirupsen" id="sidebar-github">
                 <svg height="23px" style="fill: #999;" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 480 512"><path d="M186.1 328.7c0 20.9-10.9 55.1-36.7 55.1s-36.7-34.2-36.7-55.1 10.9-55.1 36.7-55.1 36.7 34.2 36.7 55.1zM480 278.2c0 31.9-3.2 65.7-17.5 95-37.9 76.6-142.1 74.8-216.7 74.8-75.8 0-186.2 2.7-225.6-74.8-14.6-29-20.2-63.1-20.2-95 0-41.9 13.9-81.5 41.5-113.6-5.2-15.8-7.7-32.4-7.7-48.8 0-21.5 4.9-32.3 14.6-51.8 45.3 0 74.3 9 108.8 36 29-6.9 58.8-10 88.7-10 27 0 54.2 2.9 80.4 9.2 34-26.7 63-35.2 107.8-35.2 9.8 19.5 14.6 30.3 14.6 51.8 0 16.4-2.6 32.7-7.7 48.2 27.5 32.4 39 72.3 39 114.2zm-64.3 50.5c0-43.9-26.7-82.6-73.5-82.6-18.9 0-37 3.4-56 6-14.9 2.3-29.8 3.2-45.1 3.2-15.2 0-30.1-.9-45.1-3.2-18.7-2.6-37-6-56-6-46.8 0-73.5 38.7-73.5 82.6 0 87.8 80.4 101.3 150.4 101.3h48.2c70.3 0 150.6-13.4 150.6-101.3zm-82.6-55.1c-25.8 0-36.7 34.2-36.7 55.1s10.9 55.1 36.7 55.1 36.7-34.2 36.7-55.1-10.9-55.1-36.7-55.1z"/></svg>
               </a>
             </li>
@@ -84,23 +87,11 @@
               Director of Infrastructure Engineering <a href="http://shopify.com">@Shopify</a>
             </li>
             <li><br/></li>
-            <li>
-<!-- <svg height="14px" style="fill: #999; padding-right: 3px;" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 480 512"> -->
-<!-- <path fill="currentColor" d="M248 8C111 8 0 119 0 256s111 248 248 248 248-111 248-248S385 8 248 8zm0 448c-110.3 0-200-89.7-200-200S137.7 56 248 56s200 89.7 200 200-89.7 200-200 200zm-80-280c-17.7 0-32 14.3-32 32s14.3 32 32 32 32-14.3 32-32-14.3-32-32-32zm160 0c-17.7 0-32 14.3-32 32s14.3 32 32 32 32-14.3 32-32-14.3-32-32-32z"></path></svg> -->
-              <a href="/about/">About</a></li>
-            <li>
-<!-- <svg height="14px" style="fill: #999; padding-right: 3px;" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 480 512"> -->
-<!-- <path fill="currentColor" d="M448 360V24c0-13.3-10.7-24-24-24H96C43 0 0 43 0 96v320c0 53 43 96 96 96h328c13.3 0 24-10.7 24-24v-16c0-7.5-3.5-14.3-8.9-18.7-4.2-15.4-4.2-59.3 0-74.7 5.4-4.3 8.9-11.1 8.9-18.6zM128 134c0-3.3 2.7-6 6-6h212c3.3 0 6 2.7 6 6v20c0 3.3-2.7 6-6 6H134c-3.3 0-6-2.7-6-6v-20zm0 64c0-3.3 2.7-6 6-6h212c3.3 0 6 2.7 6 6v20c0 3.3-2.7 6-6 6H134c-3.3 0-6-2.7-6-6v-20zm253.4 250H96c-17.7 0-32-14.3-32-32 0-17.6 14.4-32 32-32h285.4c-1.9 17.1-1.9 46.9 0 64z"></path></svg> -->
-              <a href="/books/">Book Reviews</a></li>
-            <li>
-<!-- <svg height="14px" style="fill: #999; padding-right: 3px;" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 480 512"> -->
-<!-- <path fill="currentColor" d="M497.9 142.1l-46.1 46.1c-4.7 4.7-12.3 4.7-17 0l-111-111c-4.7-4.7-4.7-12.3 0-17l46.1-46.1c18.7-18.7 49.1-18.7 67.9 0l60.1 60.1c18.8 18.7 18.8 49.1 0 67.9zM284.2 99.8L21.6 362.4.4 483.9c-2.9 16.4 11.4 30.6 27.8 27.8l121.5-21.3 262.6-262.6c4.7-4.7 4.7-12.3 0-17l-111-111c-4.8-4.7-12.4-4.7-17.1 0zM124.1 339.9c-5.5-5.5-5.5-14.3 0-19.8l154-154c5.5-5.5 14.3-5.5 19.8 0s5.5 14.3 0 19.8l-154 154c-5.5 5.5-14.3 5.5-19.8 0zM88 424h48v36.3l-64.5 11.3-31.1-31.1L51.7 376H88v48z"></path></svg> -->
-              <a href="/napkin/">Monthly Napkin Math</a></li>
-            <li>
-<!-- <svg height="14px" style="fill: #999; padding-right: 3px;" -->
-<!--   xmlns="http://www.w3.org/2000/svg" viewBox="0 0 500 500"> -->
-<!-- <path fill="currentColor" d="M567.938 243.908L462.25 85.374A48.003 48.003 0 0 0 422.311 64H153.689a48 48 0 0 0-39.938 21.374L8.062 243.908A47.994 47.994 0 0 0 0 270.533V400c0 26.51 21.49 48 48 48h480c26.51 0 48-21.49 48-48V270.533a47.994 47.994 0 0 0-8.062-26.625zM162.252 128h251.497l85.333 128H376l-32 64H232l-32-64H76.918l85.334-128z"></path></svg> -->
-              <a href="https://buttondown.email/sirupsen">Subscribe to new posts</a></li>
+            <!-- remember to put in mobile section too! -->
+            <li><a href="/about/">About</a></li>
+            <li><a href="/books/">Book Reviews</a></li>
+            <li><a href="/napkin/">Monthly Napkin Math</a></li>
+            <li><a href="https://buttondown.email/sirupsen">Subscribe to new posts</a></li>
             <li><a href="https://feeds.feedburner.com/sirupsen">RSS</a></li>
           </ul>
 
