--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -47,7 +47,7 @@
           <li><a href="/about/">About</a></br></li>
           <li style="padding-left: 12px;"><a href="/books/">Book Reviews</a></li>
           <li style="padding-left: 12px;"><a href="/napkin/">Monthly Napkin Math</a></li>
-          <li style="padding-left: 12px;"><a href="https://buttondown.email/sirupsen">Subscribe to new posts</a></li>
+          <li style="padding-left: 12px;"><a href="/subscribe/">Subscribe to new posts</a></li>
         </ul>
       </div>
 
@@ -91,7 +91,7 @@
             <li><a href="/about/">About</a></li>
             <li><a href="/books/">Book Reviews</a></li>
             <li><a href="/napkin/">Monthly Napkin Math</a></li>
-            <li><a href="https://buttondown.email/sirupsen">Subscribe to new posts</a></li>
+            <li><a href="/subscribe/">Subscribe to new posts</a></li>
             <li><a href="https://feeds.feedburner.com/sirupsen">RSS</a></li>
           </ul>
 
