Fix mobile view

--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -43,11 +43,11 @@
         <ul>
           <li><a href="/">Simon Hørup Eskildsen</a></li>
           <li><a href="mailto:simon@sirupsen.com">simon@sirupsen.com</a></li>
-          <li><a href="https://twitter.com/sirupsen">@sirupsen</a></li>
+          <li style="margin-bottom: 16px;"><a href="https://twitter.com/sirupsen">@sirupsen</a></li>
           <li><a href="/about/">About</a></br></li>
-          <li style="padding-left: 12px;"><a href="/books/">Book Reviews</a></li>
-          <li style="padding-left: 12px;"><a href="/napkin/">Monthly Napkin Math</a></li>
-          <li style="padding-left: 12px;"><a href="/subscribe/">Subscribe to new posts</a></li>
+          <li><a href="/books/">Book Reviews</a></li>
+          <li><a href="/napkin/">Monthly Napkin Math</a></li>
+          <li><a href="/subscribe/">Subscribe to new posts</a></li>
         </ul>
       </div>
 
