--- a/assets/css/base.css
+++ b/assets/css/base.css
@@ -56,6 +56,7 @@
 		font: 14px/21px "HelveticaNeue", "Helvetica Neue", Helvetica, Arial, sans-serif;
 		color: #444; 
 		-webkit-font-smoothing: antialiased; /* Fix for webkit rendering */
+    -moz-osx-font-smoothing: grayscale;
 		-webkit-text-size-adjust: none;
  }
 	
