--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -44,7 +44,7 @@
           <li><a href="/">Simon Hørup Eskildsen</a></li>
           <li><a href="mailto:simon@sirupsen.com">simon@sirupsen.com</a></li>
           <li style="margin-bottom: 16px;"><a href="https://twitter.com/sirupsen">@sirupsen</a></li>
-          <li><a href="/">Home</a></br></li>
+          <li><a href="/">Blog</a></br></li>
           <li><a href="/about/">About</a></br></li>
           <li><a href="/books/">Book Reviews</a></li>
           <li><a href="/napkin/">Monthly Napkin Math</a></li>
@@ -89,6 +89,7 @@
             </li>
             <li><br/></li>
             <!-- remember to put in mobile section too! -->
+            <li><a href="/">Blog</a></br></li>
             <li><a href="/about/">About</a></li>
             <li><a href="/books/">Book Reviews</a></li>
             <li><a href="/napkin/">Monthly Napkin Math</a></li>
