change to fast subscribe link

--- a/layouts/napkin/single.html
+++ b/layouts/napkin/single.html
@@ -19,8 +19,7 @@
     <div id="subscribe">
         This is an edition of the Napkin Math newsletter, where you'll receive
         an occassional problem to practise your order-of-magnitude calculations.
-        You can <a href="https://buttondown.email/computer-napkins">subscribe
-        through email.</a>
+        You can <a href="/napkin">subscribe through email.</a>
     </div>
 
     {{ .Content }}
