--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -27,6 +27,8 @@ blog: true
   <footer class="ten columns">
     <p id='follow'>
     <br><br>
+    <hr>
+    Read Hancker News? Checkout the top recommended books from Ask HN threads <a href="https://mapfilterfold.com/">at mapfilterfold.com</a>, my newest side project.
       <!-- 
       We should follow eachother <a href="http://twitter.com/MatthewOdette" onClick="_gaq.push(['_trackEvent', 'Link', 'Click', 'Post Twitter']);">on Twitter.</a> 
       -->
