fix post link for subscription

--- a/layouts/post/single.html
+++ b/layouts/post/single.html
@@ -30,7 +30,7 @@
     {{ end }}
 
     <div id="subscribe">
-        <a href="https://buttondown.email/sirupsen">Subscribe through email</a> to new articles (typically only a few a year).
+        <a href="/subscribe/">Subscribe through email</a> to new articles (typically only a few a year).
     </div>
   </div>
 </article>
