--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -85,7 +85,7 @@
           <ul id="me">
             <li>Simon Hørup Eskildsen</span></li>
             <li class="gray">
-              Director of Infrastructure Engineering <a href="http://shopify.com">@Shopify</a>
+              Principal Engineer <a href="http://shopify.com">@Shopify</a>
             </li>
             <li><br/></li>
             <!-- remember to put in mobile section too! -->
