--- a/layouts/books/list.html
+++ b/layouts/books/list.html
@@ -4,12 +4,13 @@
 </header>
 
 <ul id="posts">
-  {{ $pages := .Site.RegularPages.ByPublishDate.Reverse }}
+  {{ $pages := .Site.RegularPages.ByPublishDate }}
 
   {{ if .Params.list_sort_order }}
-    {{ $pages = .Site.RegularPages.ByParam .Params.list_sort_order }}
-    {{ $pages = $pages.Reverse }}
+    {{ $pages = ($pages.ByParam .Params.list_sort_order) }}
   {{ end }}
+
+  {{ $pages = $pages.Reverse }}
 
   <li>
     <a class="eight columns offset-by-four">
@@ -17,8 +18,6 @@
 
     <div class="four columns">
       {{ if .Params.list_sort_order }}
-        <!-- <img src="/static/images/sort.svg" style="display: inline-block; opacity: 20%;" width="16px" /> -->
-
         <a href="/books/">
           <img src="/static/images/sort.svg" style="display: inline-block;
           padding-left: 114px;" width="16px" />
@@ -27,9 +26,6 @@
         <a href="/books/by-stars/">
           <img src="/static/images/sort.svg" style="display: inline-block; opacity: 100%;" width="16px" />
         </a>
-
-        <!-- <img src="/static/images/sort.svg" style="display: inline-block; -->
-        <!-- padding-left: 94px; opacity: 20%;" width="16px" /> -->
       {{ end }}
     </div>
   </li>
