--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -10,11 +10,10 @@
 
     <style>
       {{- $fonts := resources.Get "css/fonts.css" | toCSS | minify }}
-      {{- $syntax := resources.Get "css/syntax.css" | toCSS | minify }}
       {{- $skeleton := resources.Get "css/skeleton.css" | toCSS | minify }}
       {{- $base := resources.Get "css/base.css" | toCSS | minify }}
       {{- $layout := resources.Get "css/layout.css" | toCSS | minify }}
-      {{- $style := slice $fonts $syntax $skeleton $base $layout | resources.Concat "css/bundle.css" }}
+      {{- $style := slice $fonts $skeleton $base $layout | resources.Concat "css/bundle.css" }}
       {{- $style.Content | safeCSS }}
     </style>
     <!-- <link rel="stylesheet" type="text/css" href="/static/css/style.css"> -->
