--- a/layouts/napkin/single.html
+++ b/layouts/napkin/single.html
@@ -17,7 +17,7 @@
   </div>
   <div class="ten columns" id="article-content">
     <div id="subscribe">
-        This is an edition of the Napkin Math newsletter, where you'll receive
+        This is an edition of the <a href="/napkin/">Napkin Math newsletter</a>, where you'll receive
         an occassional problem to practise your order-of-magnitude calculations.
         You can <a href="/napkin">subscribe through email.</a>
     </div>
