--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -34,7 +34,8 @@
       plausible('page')
     </script>
 
-    <link rel="icon" href="data:;base64,=">
+    <!-- <link rel="icon" href="data:;base64,="> -->
+    <link rel="icon" type="image/png" href="/static/images/favicon.png" />
   </head>
   <body>
     <div class="container">	
