update napkin desc again

--- a/layouts/napkin/single.html
+++ b/layouts/napkin/single.html
@@ -17,8 +17,9 @@
   </div>
   <div class="ten columns" id="article-content">
     <div id="subscribe">
-        This is an edition of the <a href="/napkin/">Napkin Math newsletter</a>, where you'll receive
-        an occassional problem to practise your order-of-magnitude calculations.
+        This is an edition of the <a href="/napkin/">Napkin Math newsletter</a>,
+        a newsletter about using napkin math and first-principle thinking to
+        estimate the performance of systems.
         You can <a href="/napkin">subscribe through email.</a>
     </div>
 
