--- a/layouts/post/single.html
+++ b/layouts/post/single.html
@@ -36,11 +36,16 @@
     {{ end }}
 
     <div id="subscribe">
-        <a href="/subscribe/">Subscribe through email</a> to new articles
-        (typically only a few a year). Consider also checking out my
+      <p><a href="/subscribe/">Subscribe through email</a> to new articles
+        (typically only a few a year).
+      </p>
+
+      <p>
+        Consider also checking out my
         <a href="/napkin/">napkin math newsletter</a>, which is about estimating 
         systems performance from first-principles, e.g.: is the number of MySQL
         transactions per second <a href="/napkin/problem-10-mysql-transactions-per-second/">equal to the number of fsyncs per second?</a>
+      </p>
     </div>
   </div>
 </article>
