perf: preload favicon

--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -20,6 +20,7 @@
 
     <link rel="preload" href="/static/fonts/open-sans-regular.ttf" type="font/ttf" as="font" crossorigin="anonymous">
     <link rel="preload" href="/static/images/gravatar.jpg" as="image">
+    <link rel="preload" href="/static/images/favicon.png" as="image">
     {{ block "header" . }}
     {{ end }}
 
