--- a/layouts/napkin/single.html
+++ b/layouts/napkin/single.html
@@ -1,3 +1,9 @@
+{{ define "header" }}
+  <link rel="preload" href="/static/fonts/droid-serif-regular.ttf" type="font/ttf" as="font" crossorigin="anonymous">
+  <link rel="preload" href="/static/fonts/open-sans-italic.ttf" type="font/ttf" as="font" crossorigin="anonymous">
+  <link rel="preload" href="/static/fonts/open-sans-semibold.ttf" type="font/ttf" as="font" crossorigin="anonymous">
+{{ end }}
+
 {{ define "main" }}
 <article class='ten columns offset-by-four' id="article-content">
   <header class="ten columns" id="article-header">
